--- a/index.html
+++ b/index.html
@@ -261,7 +261,43 @@
   </div>
 
   <div class="lyrics-box">
-    Lyrics(ここに歌詞が入ります)
+    "ねんきん",
+    "わにくのうえをはいずりず",
+    "りぞるげ",
+    "るかたいげるげるかた",
+    "いげるげるにくのうえのねんきんの",
+    "いきかたみつけたらぜったいとう",
+    "りぬけるる",
+    "にくがふえるよう",
+    "すがめにみえそ",
+    "うそうそう",
+    "おかあさんが",
+    "いつもふ",
+    "あんかか",
+    "えてにく",
+    "をふやすのうりょくがあ",
+    "るがあるに",
+    "くがおおい",
+    "すくないど",
+    "ちらがよいのだ",
+    "ろうまよ",
+    "っているけ",
+    "どているけどちきゅ",
+    "うなかの",
+    "せいめい",
+    "のためににく",
+    "もんだいかいけつしない",
+    "といけない",
+    "しないといけ",
+    "ないにく",
+    "がふえることでまわりのひとびとも",
+    "えいきょうす",
+    "るするに",
+    "くわふえてもへって",
+    "もこまるよねよねよねでんしゃのなか",
+    "でうきうきしながらすわりこもうと",
+    "するんだけ",
+    "どうとするん"
   </div>
 
   <script>
