--- a/index.html
+++ b/index.html
@@ -261,43 +261,39 @@
   </div>
 
   <div class="lyrics-box">
-    "ねんきん",
-    "わにくのうえをはいずりず",
-    "りぞるげ",
-    "るかたいげるげるかた",
-    "いげるげるにくのうえのねんきんの",
-    "いきかたみつけたらぜったいとう",
-    "りぬけるる",
-    "にくがふえるよう",
-    "すがめにみえそ",
-    "うそうそう",
-    "おかあさんが",
-    "いつもふ",
-    "あんかか",
-    "えてにく",
-    "をふやすのうりょくがあ",
-    "るがあるに",
-    "くがおおい",
-    "すくないど",
-    "ちらがよいのだ",
-    "ろうまよ",
-    "っているけ",
-    "どているけどちきゅ",
-    "うなかの",
-    "せいめい",
-    "のためににく",
-    "もんだいかいけつしない",
-    "といけない",
-    "しないといけ",
-    "ないにく",
-    "がふえることでまわりのひとびとも",
-    "えいきょうす",
-    "るするに",
-    "くわふえてもへって",
-    "もこまるよねよねよねでんしゃのなか",
-    "でうきうきしながらすわりこもうと",
-    "するんだけ",
-    "どうとするん"
+    "さらのうえににくわ",
+    "あるのにわたしの",
+    "にくたいのさらわ",
+    "ないことわざーー",
+    "みたいでもだれも",
+    "うなずかないーー",
+    "ねんきんわにくの",
+    "うえをとおりーー",
+    "せかいをおぼえる",
+    "ぞるげるかたいー",
+    "げるひやりまたー",
+    "あついかくえきー",
+    "ていしゃでんしゃーー",
+    "ひやあせーーーー",
+    "おかあさんわにく",
+    "をふやすふあんの",
+    "てしいくこやでー",
+    "りんかくがとけー",
+    "わたしがまざるー",
+    "ちゃいろいかたまり",
+    "うんこかだんごか",
+    "しゃーれにぽつりー",
+    "おとのないにくうそとーー",
+    "ほんとうのふだゆれる",
+    "かまれぬにくーー",
+    "ねむらぬにくーー",
+    "ねんきんのあとー",
+    "だけしょうめいーー",
+    "みたいにのこるいれの",
+    "わたしようにさら",
+    "をかかえすくなくー",
+    "てもいきるーーー",
+    "せいめい"
   </div>
 
   <script>
